--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "dev": "concurrently \"nodemon server.js\" \"cd ./client  && npm start \" ",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "cd client && npm install && npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Chizzy/It-Goes-Like-This.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "Chizzy",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Chizzy/It-Goes-Like-This/issues"
@@ -19,10 +22,14 @@
   "homepage": "https://github.com/Chizzy/It-Goes-Like-This#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
     "querystring": "^0.2.0",
     "request": "^2.88.0"
+  },
+  "engines": {
+    "node": "9.7.0"
   }
 }
