--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "spotify-web-api-js": "^1.1.1",
     "styled": "^1.0.0",
     "styled-components": "^4.1.1"
   },
