--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "components": "^0.1.0",
     "genius-api": "^0.4.1",
     "react": "^16.6.3",
+    "react-bootstrap": "^0.32.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
